First Version going live

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 </div>
 </body>
 
+<div class="container-fluid"  style="padding-top: 100px; background-color: white;"></div>
+
 <footer id="footer">
     <small>
         <a href= "./privacy_de.html" target="_blank" style="color:white;">Impressum, Disclaimer, Datenschutz (DE)</a><br>
