--- a/photography.html
+++ b/photography.html
@@ -36,7 +36,20 @@
     </ul>
     </div>
 </nav>
-<div class="container w-75" style="padding-top: 50px; max-width: 800px;">   <!--style="max-width: 800px;"-->
+<!-- Description-->
+<div class="container-fluid"  style="padding-top: 30px;">   <!-- background-color: whitesmoke;-->
+    <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
+    <div class="col-xl-9 col-sm-10 col-xs-11  pb-5">
+        <h2 class="display-5">Photography</h1>
+        <p>
+            Photos I took during my most recent travels.
+        </p>
+</div>
+</div>
+</div>
+
+
+<div class="container w-75" style="padding-top: 20px; max-width: 800px;">   <!--style="max-width: 800px;"-->
     <div class="row">
         <div class="col-6">
             <img src="img/pakistan/DSC_5933_1080.JPG" href="./pakistan.html" class="img-fluid">
@@ -61,8 +74,10 @@
     </div>
 </div>
 
+<div class="container-fluid"  style="padding-top: 100px; background-color: white;"></div>
 
 </body>
+
 <footer id="footer">
     <small>
         <a href= "./privacy_de.html" target="_blank" style="color:white;">Impressum, Disclaimer, Datenschutz (DE)</a><br>
