--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@
     <div class="col-xl-7 col-lg-9 col-md-11 pb-5">
         <h1 class="display-5">About Me</h1>
         <p>
-            I grew up in Frankfurt, did my Bachelor and Master Degree in Industrial Engineering at RWTH Aachen
+            I grew up in Frankfurt, did my Bachelor's and Master's degree in Industrial Engineering at RWTH Aachen University
             and currently live in Cologne. I got interested in everything related to the exploration and analysis
             of data through my studies. I interned at proseat GmbH & Co. KG and Detecon International GmbH.
             After writing my Master's thesis at Fraunhofer Institute for Production Technology IPT I spent the last six
