--- a/ethiopia.html
+++ b/ethiopia.html
@@ -65,7 +65,7 @@
 <!-- Image Carousel-->
 <div class="container-fluid"  style="padding-top: 100px; padding-bottom: 30px; background-color: #2E2E2E;">
 <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
-<div class="col-xl-7 col-lg-9 col-md-11">
+<div class="col-xl-8 col-lg-9 col-md-11">
 <div id="carouselExampleControls" class="carousel slide  align-items-center" data-ride="carousel" data-interval="false">
 <div class="carousel-inner">
 
@@ -79,19 +79,19 @@
     <div class="carousel-item">
         <img class="d-block w-100" src="img/ethiopia/DSC_1517_1080.JPG" alt="Ethiopia_2">
         <div class="carousel-caption d-none d-md-block">
-            <p>Tisissat water falls of the blue nile close to Bahir Dar. <br> &nbsp;</p>
+            <p>Tisissat water falls of the blue nile close to Bahir Dar <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
         <img class="d-block w-100" src="img/ethiopia/DSC_2772_1080.JPG" alt="Ethiopia_3">
         <div class="carousel-caption d-none d-md-block">
-            <p>Man praying leaning on one of the churches hewn out of solid rock in Lalibela<br> &nbsp;</p>
+            <p>Man praying leaning against one of the churches hewn out of solid rock in Lalibela<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
         <img class="d-block w-100" src="img/ethiopia/DSC_2785_1080.JPG" alt="Ethiopia_4">
         <div class="carousel-caption d-none d-md-block">
-            <p>Man praying inside of one of the churches hewn out of solid rock in Lalibela<br> &nbsp;</p>
+            <p>Man praying inside of one of the churches in Lalibela<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
