--- a/iran.html
+++ b/iran.html
@@ -45,12 +45,12 @@
         <h1 class="display-5">Iran</h1>
         <p>
             My travels in Iran took place in March 2018.
-            Traveling in Iran without a planned itineary was very easy. Since there were a few places I knew I wanted to visit (Isfahan, Persepolis, Teheran) a
+            Traveling in Iran without a planned itineary was very easy. Since there were a few places I knew I wanted to visit (Isfahan, Persepolis, Tehran) a
             very general route was given. Everything else evolved after speaking to Iranians on the way. The persian hospitality is unbelievable and 
             sometimes even made me a little uncomforable. During my entire trip,
              which also led to somme very untouristic places, I felt very safe and people would go out of their way to help me.
             The places I visited were Teheran, Kermanshah, Sanandaj, Isfahan, Varzaneh, Yazd, Shiraz, Lorestan region and Zandschan.
-            Communication was not to hard, since many Iranians speak English, and some even speak some German. I will definetly return to Iran when
+            Communication was not too hard, since many Iranians speak English, and some even speak some German. I will definetly return to Iran when
             I have the chance, since there is so much to see and do.
         </p>
 </div>
@@ -62,7 +62,7 @@
 <!-- Image Carousel-->
 <div class="container-fluid"  style="padding-top: 100px; padding-bottom: 30px; background-color: #2E2E2E;">
 <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
-<div class="col-xl-7 col-lg-9 col-md-11">
+<div class="col-xl-8 col-lg-9 col-md-11">
 <div id="carouselExampleControls" class="carousel slide  align-items-center" data-ride="carousel" data-interval="false">
 <div class="carousel-inner">
 
@@ -70,19 +70,19 @@
     <div class="carousel-item active">
         <img class="d-block w-100" src="img/iran/DSC_4398_1080.JPG" alt="Iran_1">
         <div class="carousel-caption d-none d-md-block">
-            <p>Men crossing the bridge in Isfahan<br> &nbsp;</p>
+            <p>Men crossing a bridge in Isfahan<br> &nbsp;</p>
         </div>
     </div>    
     <div class="carousel-item">
         <img class="d-block w-100" src="img/iran/DSC_3412_1080.JPG" alt="Iran_2">
         <div class="carousel-caption d-none d-md-block">
-            <p>View over Teheran<br> &nbsp;</p>
+            <p>View over Tehran<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
         <img class="d-block w-100" src="img/iran/DSC_3516_1080.JPG" alt="Iran_4">
         <div class="carousel-caption d-none d-md-block">
-            <p>Behistun inscription of Darius I in Bisotum, Kermanshah <br> &nbsp;</p>
+            <p>Behistun inscription of Darius I in Bisotun, Kermanshah <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
@@ -100,7 +100,7 @@
     <div class="carousel-item">
         <img class="d-block w-100" src="img/iran/DSC_4417_1080.JPG" alt="Iran_7">
         <div class="carousel-caption d-none d-md-block">
-            <p>Woman walking through the closed bazar of Iran<br> &nbsp;</p>
+            <p>Woman walking through the closed bazar of Isfahan<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
@@ -118,13 +118,13 @@
     <div class="carousel-item">
         <img class="d-block w-100" src="img/Iran/DSC_4888_1080.JPG" alt="Iran_10">
         <div class="carousel-caption d-none d-md-block">
-            <p>Yazd II <br> &nbsp;</p>
+            <p>Yazd<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
         <img class="d-block w-100" src="img/Iran/DSC_5019_1080.JPG" alt="Iran_11">
         <div class="carousel-caption d-none d-md-block">
-            <p>Morning sun illuminating the Nasir-ol-Molk Mosque in Shiraz<br> &nbsp;</p>
+            <p>Morning sun illuminating the Nasir-ol-Molk mosque in Shiraz<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
