Uppercase JPG to jpg

--- a/pakistan.html
+++ b/pakistan.html
@@ -68,74 +68,74 @@
 
     <!-- Images-->
     <div class="carousel-item active">
-        <img class="d-block w-100" src="img/pakistan/DSC_5933_1080.JPG" alt="Pakistan_11">
+        <img class="d-block w-100" src="img/pakistan/DSC_5933_1080.jpg" alt="Pakistan_11">
         <div class="carousel-caption d-none d-md-block">
             <p>Kids playing cricket in the streets of Peschawar<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_4468_1080.JPG" alt="Pakistan_1">
+        <img class="d-block w-100" src="img/pakistan/DSC_4468_1080.jpg" alt="Pakistan_1">
         <div class="carousel-caption d-none d-md-block">
             <p>Men repairing the road on the way to the mountain Nanga Parbat<br> &nbsp;</p>
         </div>
     </div>    
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_4600_1080.JPG" alt="Pakistan_2">
+        <img class="d-block w-100" src="img/pakistan/DSC_4600_1080.jpg" alt="Pakistan_2">
         <div class="carousel-caption d-none d-md-block">
             <p>Nanga Parbat early in the morning and its reflection in a small puddle<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_4697_1080.JPG" alt="Pakistan_3">
+        <img class="d-block w-100" src="img/pakistan/DSC_4697_1080.jpg" alt="Pakistan_3">
         <div class="carousel-caption d-none d-md-block">
             <p>Attabad Lake, north of Karimabad. The lake is the result of a landslide that blocked the river<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_5152_1080.JPG" alt="Pakistan_4">
+        <img class="d-block w-100" src="img/pakistan/DSC_5152_1080.jpg" alt="Pakistan_4">
         <div class="carousel-caption d-none d-md-block">
             <p>In the mountains of Pakistan, on a road connecting the Karakoam Highway with Shimshal <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_5180_1080.JPG" alt="Pakistan_5">
+        <img class="d-block w-100" src="img/pakistan/DSC_5180_1080.jpg" alt="Pakistan_5">
         <div class="carousel-caption d-none d-md-block">
             <p>In the mountains of Pakistan, on a road connecting the Karakoam Highway with Shimshal <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_5311_1080.JPG" alt="Pakistan_6">
+        <img class="d-block w-100" src="img/pakistan/DSC_5311_1080.jpg" alt="Pakistan_6">
         <div class="carousel-caption d-none d-md-block">
             <p>The setting sun luminates the clouds caught in the mountain range.<br> 
                 Seen from the road connecting Hopar Valley with Karimabad</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_5380_1080.JPG" alt="Pakistan_7">
+        <img class="d-block w-100" src="img/pakistan/DSC_5380_1080.jpg" alt="Pakistan_7">
         <div class="carousel-caption d-none d-md-block">
             <p>Moonlight iluminating Mount Diran. Seen from Mount Rakaposhi basecamp<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_5659_1080.JPG" alt="Pakistan_8">
+        <img class="d-block w-100" src="img/pakistan/DSC_5659_1080.jpg" alt="Pakistan_8">
         <div class="carousel-caption d-none d-md-block">
             <p>A mountain river carrying glacier water <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_5707_1080.JPG" alt="Pakistan_9">
+        <img class="d-block w-100" src="img/pakistan/DSC_5707_1080.jpg" alt="Pakistan_9">
         <div class="carousel-caption d-none d-md-block">
             <p>Autumn colors in Shandur National Park <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_5802_1080.JPG" alt="Pakistan_10">
+        <img class="d-block w-100" src="img/pakistan/DSC_5802_1080.jpg" alt="Pakistan_10">
         <div class="carousel-caption d-none d-md-block">
             <p>Triangles <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/pakistan/DSC_5961_1080.JPG" alt="Pakistan_12">
+        <img class="d-block w-100" src="img/pakistan/DSC_5961_1080.jpg" alt="Pakistan_12">
         <div class="carousel-caption d-none d-md-block">
             <p>Men inviting tourist to chai <br> &nbsp;</p>
         </div>
