--- a/photography.html
+++ b/photography.html
@@ -52,22 +52,22 @@
 <div class="container w-75" style="padding-top: 20px; max-width: 800px;">   <!--style="max-width: 800px;"-->
     <div class="row">
         <div class="col-6">
-            <img src="img/pakistan/DSC_5933_1080.JPG" href="./pakistan.html" class="img-fluid">
+            <img src="..img/pakistan/DSC_5933_1080.jpg" href="./pakistan.html" class="img-fluid">
             <a href="./pakistan.html" ><div class="text-center" style="margin-top:5px;">Pakistan, October 2019</div></a> 
         </div>
         <div class="col-6">
-            <img src="img/ethiopia/DSC_2551_1080.JPG" href="./ethiopia.html" class="img-fluid">
+            <img src="..img/ethiopia/DSC_2551_1080.jpg" href="./ethiopia.html" class="img-fluid">
             <a href="./ethiopia.html" ><div class="text-center" style="margin-top:5px;">Ethiopia, October 2018</div></a> 
         </div>
             
     </div>
     <div class="row">
         <div class="col-6">
-            <img src="img/iran/DSC_4398_1080.JPG" href="./iran.html" class="img-fluid">
+            <img src="..img/iran/DSC_4398_1080.jpg" href="./iran.html" class="img-fluid">
             <a href="./iran.html" ><div class="text-center" style="margin-top:5px;">Iran, March 2018</div></a> 
         </div>
         <div class="col-6">
-            <img src="img/china/DSC_9810_1080.JPG" href="./pakistan.html" class="img-fluid">
+            <img src="..img/china/DSC_9810_1080.jpg" href="./pakistan.html" class="img-fluid">
             <div class="text-center" style="margin-top:5px;">China, June 2017 <br>(Coming soon hopefully)</div> 
         </div>
             
