--- a/ethiopia.html
+++ b/ethiopia.html
@@ -71,67 +71,67 @@
 
     <!-- Images-->
     <div class="carousel-item active">
-        <img class="d-block w-100" src="img/ethiopia/DSC_2551_1080.JPG" alt="Ethiopia_1">
+        <img class="d-block w-100" src="img/ethiopia/DSC_2551_1080.jpg" alt="Ethiopia_1">
         <div class="carousel-caption d-none d-md-block">
             <p>Men having breakfast after attending church mass at a church close to Abiy Addi<br>&nbsp; </p>
         </div>
     </div>    
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_1517_1080.JPG" alt="Ethiopia_2">
+        <img class="d-block w-100" src="img/ethiopia/DSC_1517_1080.jpg" alt="Ethiopia_2">
         <div class="carousel-caption d-none d-md-block">
             <p>Tisissat water falls of the blue nile close to Bahir Dar <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_2772_1080.JPG" alt="Ethiopia_3">
+        <img class="d-block w-100" src="img/ethiopia/DSC_2772_1080.jpg" alt="Ethiopia_3">
         <div class="carousel-caption d-none d-md-block">
             <p>Man praying leaning against one of the churches hewn out of solid rock in Lalibela<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_2785_1080.JPG" alt="Ethiopia_4">
+        <img class="d-block w-100" src="img/ethiopia/DSC_2785_1080.jpg" alt="Ethiopia_4">
         <div class="carousel-caption d-none d-md-block">
             <p>Man praying inside of one of the churches in Lalibela<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_1687_1080.JPG" alt="Ethiopia_5">
+        <img class="d-block w-100" src="img/ethiopia/DSC_1687_1080.jpg" alt="Ethiopia_5">
         <div class="carousel-caption d-none d-md-block">
             <p>Local guide leading the way through Simien national park <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_1831_1080.JPG" alt="Ethiopia_6">
+        <img class="d-block w-100" src="img/ethiopia/DSC_1831_1080.jpg" alt="Ethiopia_6">
         <div class="carousel-caption d-none d-md-block">
             <p>View over the landscape of Simien national park <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_1918_1080.JPG" alt="Ethiopia_7">
+        <img class="d-block w-100" src="img/ethiopia/DSC_1918_1080.jpg" alt="Ethiopia_7">
         <div class="carousel-caption d-none d-md-block">
             <p>Galeda (bleeding-heart-monkey) in Simien national park<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_1940_1080.JPG" alt="Ethiopia_8">
+        <img class="d-block w-100" src="img/ethiopia/DSC_1940_1080.jpg" alt="Ethiopia_8">
         <div class="carousel-caption d-none d-md-block">
             <p>Fog rising after sun set in Simien national park<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_2359_1080.JPG" alt="Ethiopia_9">
+        <img class="d-block w-100" src="img/ethiopia/DSC_2359_1080.jpg" alt="Ethiopia_9">
         <div class="carousel-caption d-none d-md-block">
             <p>Men returning to their villages after spending the day in Abiy Addi<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_2025_1080.JPG" alt="Ethiopia_10">
+        <img class="d-block w-100" src="img/ethiopia/DSC_2025_1080.jpg" alt="Ethiopia_10">
         <div class="carousel-caption d-none d-md-block">
             <p>People reading the news, Aksum<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_2723_1080.JPG" alt="Ethiopia_11">
+        <img class="d-block w-100" src="img/ethiopia/DSC_2723_1080.jpg" alt="Ethiopia_11">
         <div class="carousel-caption d-none d-md-block">
             <p>Priest waiting for the tourist to admire the church he opened. <br> 
                 Abuna Yemata Guh, close to Hawzien</p>
