--- a/iran.html
+++ b/iran.html
@@ -68,73 +68,73 @@
 
     <!-- Images-->
     <div class="carousel-item active">
-        <img class="d-block w-100" src="img/iran/DSC_4398_1080.JPG" alt="Iran_1">
+        <img class="d-block w-100" src="img/iran/DSC_4398_1080.jpg" alt="Iran_1">
         <div class="carousel-caption d-none d-md-block">
             <p>Men crossing a bridge in Isfahan<br> &nbsp;</p>
         </div>
     </div>    
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/iran/DSC_3412_1080.JPG" alt="Iran_2">
+        <img class="d-block w-100" src="img/iran/DSC_3412_1080.jpg" alt="Iran_2">
         <div class="carousel-caption d-none d-md-block">
             <p>View over Tehran<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/iran/DSC_3516_1080.JPG" alt="Iran_4">
+        <img class="d-block w-100" src="img/iran/DSC_3516_1080.jpg" alt="Iran_4">
         <div class="carousel-caption d-none d-md-block">
             <p>Behistun inscription of Darius I in Bisotun, Kermanshah <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/iran/DSC_3557_1080.JPG" alt="Iran_5">
+        <img class="d-block w-100" src="img/iran/DSC_3557_1080.jpg" alt="Iran_5">
         <div class="carousel-caption d-none d-md-block">
             <p>View over Sanandaj after sun set<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/iran/DSC_3671_1080.JPG" alt="Iran_6">
+        <img class="d-block w-100" src="img/iran/DSC_3671_1080.jpg" alt="Iran_6">
         <div class="carousel-caption d-none d-md-block">
             <p>Uraman Takht, a mountain village in the Kurdistan province near the Iraq border<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/iran/DSC_4417_1080.JPG" alt="Iran_7">
+        <img class="d-block w-100" src="img/iran/DSC_4417_1080.jpg" alt="Iran_7">
         <div class="carousel-caption d-none d-md-block">
             <p>Woman walking through the closed bazar of Isfahan<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/iran/DSC_4308_1080.JPG" alt="Iran_8">
+        <img class="d-block w-100" src="img/iran/DSC_4308_1080.jpg" alt="Iran_8">
         <div class="carousel-caption d-none d-md-block">
             <p>Naqsh-e Jahan Square in Isfahan <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/iran/DSC_4589_1080.JPG" alt="Iran_9">
+        <img class="d-block w-100" src="img/iran/DSC_4589_1080.jpg" alt="Iran_9">
         <div class="carousel-caption d-none d-md-block">
             <p>View over the old town of Yazd <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/Iran/DSC_4888_1080.JPG" alt="Iran_10">
+        <img class="d-block w-100" src="img/Iran/DSC_4888_1080.jpg" alt="Iran_10">
         <div class="carousel-caption d-none d-md-block">
             <p>Yazd<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/Iran/DSC_5019_1080.JPG" alt="Iran_11">
+        <img class="d-block w-100" src="img/Iran/DSC_5019_1080.jpg" alt="Iran_11">
         <div class="carousel-caption d-none d-md-block">
             <p>Morning sun illuminating the Nasir-ol-Molk mosque in Shiraz<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/Iran/DSC_5030_1080.JPG" alt="Iran_12">
+        <img class="d-block w-100" src="img/Iran/DSC_5030_1080.jpg" alt="Iran_12">
         <div class="carousel-caption d-none d-md-block">
             <p>Naqsh-e Rostam between Shiraz and Persepolis <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/Iran/DSC_5351_1080.JPG" alt="Iran_12">
+        <img class="d-block w-100" src="img/Iran/DSC_5351_1080.jpg" alt="Iran_12">
         <div class="carousel-caption d-none d-md-block">
             <p>Train stop somewhere between Andimeshk and Dorud <br> &nbsp;</p>
         </div>
