Eliminate some path mistakes

--- a/aboutme.html
+++ b/aboutme.html
@@ -61,7 +61,7 @@
 <div class="container-fluid"  style="padding-top: 10px; background-color: #2E2E2E;">
     <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
     <div class="col-xl-5 col-lg-7 col-md-9 pb-5">
-    <img src="img/about_me/DSC_6289_1080.JPG" class="img-fluid"></div>
+    <img src="img/about_me/DSC_6289_1080.jpg" class="img-fluid"></div>
 </div>
 </div>
 
