--- a/ethiopia.html
+++ b/ethiopia.html
@@ -138,13 +138,13 @@
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_3214_1080.JPG" alt="Ethiopia_12">
+        <img class="d-block w-100" src="img/ethiopia/DSC_3214_1080.jpg" alt="Ethiopia_12">
         <div class="carousel-caption d-none d-md-block">
             <p>Women workers having a break<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/ethiopia/DSC_3322_1080.JPG" alt="Ethiopia_13">
+        <img class="d-block w-100" src="img/ethiopia/DSC_3322_1080.jpg" alt="Ethiopia_13">
         <div class="carousel-caption d-none d-md-block">
             <p>Men examining live stock at the camel market in Harar<br> &nbsp;</p>
         </div>
