--- a/photography.html
+++ b/photography.html
@@ -68,7 +68,7 @@
         </div>
         <div class="col-6">
             <img src="img/china/DSC_9810_1080.jpg" href="./pakistan.html" class="img-fluid">
-            <div class="text-center" style="margin-top:5px;">China, June 2017 <br>(Coming soon hopefully)</div> 
+            <div class="text-center" style="margin-top:5px;">China, June 2017 <br>(Hopefully coming soon)</div> 
         </div>
             
     </div>
