--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                 This is the personal website of Hanno Maximilian Zang. <br>
                 I created this website to share photos I took during my travels and to share programming projects
                 that I am working on.<br>
-                The photos that I am sharing were taken during my travels that I were lucky to do between semesters during University.
+                The photos that I am sharing were taken during my travels that I was lucky to do between semesters during University.
                 I will give a short description of each trip, but I will use the website more as a means to share my photos than
                 to share my travel experiences. If you have any specific questions about places I visited that I can help you with feel free to get in touch. 
-                The pictures were all taken by me, and I generally don't want anybody to use or distribute the pictures in any way. If you should be interested in 
+                The pictures were all taken by me, and I generally do not want anybody to use or distribute the pictures in any way. If you should be interested in 
                 the rights to use any of the pictures, please get in touch.<br>
-                The projects that I am going to share on my website are projects I am working on privately. I will create content continiously while I am persuing 
-                the projects so don't be surprised to see unfinished work. I don't think that I will publish anything I have worked on in the past 
+                The projects that I am going to share on my website are projects I am working on privately. I will create content continuously while I am persuing 
+                the projects so do not be surprised to see unfinished work. I do not think that I will publish anything I have worked on in the past 
                 (before creating this website). While the Photography part of my webpage will have content right from the beginning, 
-                the Projects part is going to start quite empty and evolve over time.
+                the Projects part is going to start rather empty and evolve over time.
             </p>
 </div>
 </div>
