--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-sm navbar-light bg-light"> 
-    <a href='./index.html' class="navbar-brand">Hanno Maximilian Zang</a>
+<nav class="navbar navbar-expand-sm navbar-light"> 
+    <a href='./index.html' class="navbar-brand" style="margin-left: 20px;">Hanno Maximilian Zang</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
+    <div class="collapse navbar-collapse" id="navbarMenu" style="margin: 10px;">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a id="selected" href="./index.html" class="nav-link">Home</a>
@@ -45,30 +45,41 @@
 
 
 
-    <div class="container-fluid"  style="padding-top: 30px;">
+    <div class="container-fluid"  style="padding-top: 70px;">
         <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
-        <div class="col-xl-7 col-lg-9 col-md-11 pb-5">
-            <h1 class="display-5">Home</h1>
+        <div class="col-xl-9 col-sm-10 col-xs-11  pb-5">
+            <h2 class="display-5">Home</h2>
             <p>
                 This is the personal website of Hanno Maximilian Zang. <br>
                 I created this website to share photos I took during my travels and to share programming projects
                 that I am working on.<br>
+                The projects that I am going to share on my website are projects I am working on privately. I will create content continuously while I am persuing 
+                the projects so do not be surprised to see unfinished work. I do not think that I will publish anything I have worked on in the past 
+                (before creating this website). While the Photography part of my webpage will have content right from the beginning, 
+                the Projects part is going to start rather empty and evolve over time.<br>
                 The photos that I am sharing were taken during my travels that I was lucky to do between semesters during University.
                 I will give a short description of each trip, but I will use the website more as a means to share my photos than
                 to share my travel experiences. If you have any specific questions about places I visited that I can help you with feel free to get in touch. 
                 The pictures were all taken by me, and I generally do not want anybody to use or distribute the pictures in any way. If you should be interested in 
-                the rights to use any of the pictures, please get in touch.<br>
-                The projects that I am going to share on my website are projects I am working on privately. I will create content continuously while I am persuing 
-                the projects so do not be surprised to see unfinished work. I do not think that I will publish anything I have worked on in the past 
-                (before creating this website). While the Photography part of my webpage will have content right from the beginning, 
-                the Projects part is going to start rather empty and evolve over time.
+                the rights to use any of the pictures, please get in touch.
             </p>
 </div>
 </div>
 </div>
 </body>
 
+<!-- Beach Picture-->
+<div class="container-fluid"  style="padding-top: 10px; background-color: white;">
+    <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
+    <div class="col-xl-5 col-lg-7 col-md-9 pb-5">
+    <img src="img/home/beach.jpg" class="img-fluid"></div>
+</div>
+</div>
+
 <div class="container-fluid"  style="padding-top: 100px; background-color: white;"></div>
+
+
+
 
 <footer id="footer">
     <small>
