--- a/pakistan.html
+++ b/pakistan.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light"> 
-        <a href='./index.html' class="navbar-brand">Hanno Maximilian Zang</a>
+    <nav class="navbar navbar-expand-sm navbar-light"> 
+        <a href='./index.html' class="navbar-brand" style="margin-left: 20px;">Hanno Maximilian Zang</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
+    <div class="collapse navbar-collapse" id="navbarMenu" style="margin: 10px;">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a href="./index.html" class="nav-link">Home</a>
@@ -39,10 +39,10 @@
 </nav>
 
 <!-- Description-->
-<div class="container-fluid"  style="padding-top: 30px; background-color: whitesmoke;">
+<div class="container-fluid"  style="padding-top: 70px; background-color: white;">
     <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
-    <div class="col-xl-7 col-lg-9 col-md-11 pb-5">
-        <h1 class="display-5">Pakistan</h1>
+    <div class="col-xl-9 col-sm-10 col-xs-11 pb-5">
+        <h2 class="display-5">Pakistan</h2>
         <p>
             My travels to Pakistan took place in October 2019. My travels in Iran made me interested in the region, 
             and I ended up going to Pakistan after choosing between other countries. I chose to go to the North of Pakistan,
