--- a/photography.html
+++ b/photography.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light"> 
-    <a href='./index.html' class="navbar-brand">Hanno Maximilian Zang</a>
+<nav class="navbar navbar-expand-sm navbar-light"> 
+    <a href='./index.html' class="navbar-brand" style="margin-left: 20px;">Hanno Maximilian Zang</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
+    <div class="collapse navbar-collapse" id="navbarMenu" style="margin: 10px;">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a href="./index.html" class="nav-link">Home</a>
@@ -37,10 +37,10 @@
     </div>
 </nav>
 <!-- Description-->
-<div class="container-fluid"  style="padding-top: 30px;">   <!-- background-color: whitesmoke;-->
+<div class="container-fluid"  style="padding-top: 70px;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
     <div class="col-xl-9 col-sm-10 col-xs-11  pb-5">
-        <h2 class="display-5">Photography</h1>
+        <h2 class="display-5">Photography</h2>
         <p>
             Photos I took during my most recent travels.
         </p>
@@ -52,18 +52,24 @@
 <div class="container w-75" style="padding-top: 20px; max-width: 800px;">   <!--style="max-width: 800px;"-->
     <div class="row">
         <div class="col-6">
+            <a href="./pakistan.html">
             <img src="img/pakistan/DSC_5933_1080.jpg" href="./pakistan.html" class="img-fluid">
+            </a>
             <a href="./pakistan.html" ><div class="text-center" style="margin-top:5px;">Pakistan, October 2019</div></a> 
         </div>
         <div class="col-6">
+            <a href="./ethiopia.html" >
             <img src="img/ethiopia/DSC_2551_1080.jpg" href="./ethiopia.html" class="img-fluid">
+            </a>
             <a href="./ethiopia.html" ><div class="text-center" style="margin-top:5px;">Ethiopia, October 2018</div></a> 
         </div>
             
     </div>
     <div class="row">
         <div class="col-6">
+            <a href="./iran.html" >
             <img src="img/iran/DSC_4398_1080.jpg" href="./iran.html" class="img-fluid">
+            </a>
             <a href="./iran.html" ><div class="text-center" style="margin-top:5px;">Iran, March 2018</div></a> 
         </div>
         <div class="col-6">
