--- a/projects.html
+++ b/projects.html
@@ -17,13 +17,14 @@
 
 </head>
 
+
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light"> 
-        <a href='./index.html' class="navbar-brand">Hanno Maximilian Zang</a>
+    <nav class="navbar navbar-expand-sm navbar-light"> 
+        <a href='./index.html' class="navbar-brand" style="margin-left: 20px;">Hanno Maximilian Zang</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
+    <div class="collapse navbar-collapse" id="navbarMenu" style="margin:10px;">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a href="./index.html" class="nav-link">Home</a>
@@ -42,11 +43,24 @@
 </nav>
 
 
+<!-- Description-->
+<div class="container-fluid"  style="padding-top: 70px;">   <!-- background-color: whitesmoke;-->
+    <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
+    <div class="col-xl-9 col-sm-10 col-xs-11  pb-5">
+        <h2 class="display-5">Projects</h2>
+        <p>
+            This is where I will publish programming projects that I am working on. 
+            I will give a link to the respective GitHub repositories. I will publish content while working on the project. Since I tend to work in iterations, my documentation will have the same structure.
+        </p>
+</div>
+</div>
+</div>
+
+
 <!-- Project List-->
 
-
 <!-- Analytics Technology Map-->
-<div class="container-fluid"  style="padding-top: 30px; padding-bottom: 30px; margin-top: 100px;">   <!-- background-color: whitesmoke;-->
+<div class="container-fluid"  style="padding-top: 30px; padding-bottom: 50px;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
     <div id="project1" class="clickable_project col-xl-7 col-sm-10 col-xs-11  pb-5">
         <a href="./projects/technologymap.html" ></a>
@@ -83,7 +97,7 @@ $("#project1").click(function() {
 
 
 <!-- My Website-->
-<div class="container-fluid"  style="padding-top: 30px; padding-bottom: 30px;">   <!-- background-color: whitesmoke;-->
+<div class="container-fluid"  style="padding-top: 30px; padding-bottom: 50px;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
     <div id="project2" class="clickable_project col-xl-7 col-sm-10 col-xs-11  pb-5">
         <a href="./projects/website.html" ></a>
