--- a/projects/website.html
+++ b/projects/website.html
@@ -9,7 +9,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="../style.css" rel="stylesheet">
-    <title>Technology Map</title>
+    <title>My website</title>
     <link rel="icon" href="./img/hz_3.png">
 
 
@@ -18,12 +18,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light"> 
-        <a href='../index.html' class="navbar-brand">Hanno Maximilian Zang</a>
+    <nav class="navbar navbar-expand-sm navbar-light"> 
+        <a href='../index.html' class="navbar-brand" style="margin-left: 20px;">Hanno Maximilian Zang</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
+    <div class="collapse navbar-collapse" id="navbarMenu" style="margin: 10px;">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a href="../index.html" class="nav-link">Home</a>
@@ -42,12 +42,12 @@
 </nav>
 
 <!-- My Website-->
-<div class="container-fluid"  style="padding-top: 80px; padding-bottom: 100px; background-color: whitesmoke; border-top: 1px solid black;">   <!-- background-color: whitesmoke;-->
+<div class="container-fluid"  style="padding-top: 70px; padding-bottom: 100px; background-color: white;">   <!-- background-color: whitesmoke;-->
   <div class="row justify-content-center x">   <!--style="max-width: 800px;"-->
     <div class="col-xl-8  col-sm-9 col-xs-11 pb-1">
     <h3 class="project_header" >My Website</h3>
     <p>28.04.2020</p>
-    <a href="https://github.com/HannoMaximilian/website" target="_blank">Github Repository</a>
+    <a href="https://github.com/HannoMaximilian/website" target="_blank">Github Repository of project</a>
     </div>
 </div>
 
