--- a/projects/technologymap.html
+++ b/projects/technologymap.html
@@ -18,12 +18,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light"> 
-        <a href='../index.html' class="navbar-brand">Hanno Maximilian Zang</a>
+    <nav class="navbar navbar-expand-sm navbar-light"> 
+        <a href='../index.html' class="navbar-brand" style="margin-left: 20px;">Hanno Maximilian Zang</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
+    <div class="collapse navbar-collapse" id="navbarMenu" style="margin: 10px;">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a href="../index.html" class="nav-link">Home</a>
@@ -42,7 +42,7 @@
 </nav>
 
 <!-- Analytics Technology Map-->
-<div class="container-fluid"  style="padding-top: 80px; padding-bottom: 100px; background-color: whitesmoke; border-top: 1px solid black;">   <!-- background-color: whitesmoke;-->
+<div class="container-fluid"  style="padding-top: 70px; padding-bottom: 100px; background-color: white;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center x">   <!--style="max-width: 800px;"-->
         <div class="col-xl-8  col-sm-9 col-xs-11 pb-1">
         <h3 class="project_header" >Analytics Technology Map</h3>
