--- a/projects/technologymap.html
+++ b/projects/technologymap.html
@@ -195,7 +195,7 @@
         </div>
     </div>
         <!-- Heatmap -->
-    <div class="row justify-content-center x">   <!--style="max-width: 800px;"-->
+    <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
         <div class="col-xl-5  col-sm-9 col-xs-11 pb-1">
             <figure style="padding-top: 20px; padding-bottom: 20px;">
                 <img id="myImg2" src="../img/projects/TechnologyMap/heatmap.png" class="img-fluid clickable_image">
