Added photos from china

--- a/photography.html
+++ b/photography.html
@@ -42,7 +42,7 @@
     <div class="col-xl-9 col-sm-10 col-xs-11  pb-5">
         <h2 class="display-5">Photography</h2>
         <p>
-            Photos I took during my most recent travels.
+            Photos I took during some of my most recent travels.
         </p>
 </div>
 </div>
@@ -67,14 +67,16 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <a href="./iran.html" >
+            <a href="./iran.html">
             <img src="img/iran/DSC_4398_1080.jpg" href="./iran.html" class="img-fluid">
             </a>
             <a href="./iran.html" ><div class="text-center" style="margin-top:5px;">Iran, March 2018</div></a> 
         </div>
         <div class="col-6">
-            <img src="img/china/DSC_9810_1080.jpg" href="./pakistan.html" class="img-fluid">
-            <div class="text-center" style="margin-top:5px;">China, June 2017 <br>(Hopefully coming soon)</div> 
+            <a href="./china.html">
+            <img src="img/china/DSC_9810_1080.jpg" href="./china.html" class="img-fluid">
+            </a>
+            <a href="./china.html"><div class="text-center" style="margin-top:5px;">China, May 2017</div></a>
         </div>
             
     </div>
